fix albums layout bug in firefox

--- a/app/webroot/css/places.css
+++ b/app/webroot/css/places.css
@@ -46,6 +46,7 @@
 
 #content
 {
+    clear: both;
     background-color: #fff;
     overflow: hidden;
     width: 982px;
